[package]
name = "roguewasm"
version = "0.1.0"
authors = ["SHIMIZU Takuma <anti.soft.b@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
